<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapWords"
                android:hint="Name" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/toppings_text"
            style="@style/HeaderTextStyle"
            app:fontFamily="monospace" />

        <CheckBox
            android:id="@+id/whippedCreamCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:checked="false"
            android:paddingLeft="24sp"
            android:text="@string/whipped_cream_text"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/chocolateCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:paddingLeft="24sp"
            android:text="@string/chocolate_text"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity_text"
            style="@style/HeaderTextStyle"
            android:textSize="18sp"
            app:fontFamily="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="0dp"
                android:onClick="decrement"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:fontFamily="monospace" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:onClick="increment"
                android:text="@string/plus_button" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/order_summary_text"
            style="@style/HeaderTextStyle"
            app:fontFamily="monospace" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="R$0,00"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:fontFamily="monospace" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order_button" />
    </LinearLayout>
</ScrollView>
